<resources>
    <string name="app_name">@string/jobo</string>
    <string name="jobo">Jobo</string>
    <string name="welcome_jobo">\n Welcome, \n Get a service provider from the \n convenience of your home</string>
    <string name="register">Register</string>
    <string name="login">Log in</string>
    <string name="title_activity_service_view">ServiceViewActivity</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in">Sign In</string>
    <string name="jane_example_com">jane@example.com</string>
    <string name="password_hint">* * * * * *</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="client">Client</string>
    <string name="service_provider">Service Provider</string>
    <string name="additional_details">Additional Details</string>
    <string name="preferred_days">1. Preferred Working Days</string>
    <string name="preferred_days_label">Preferred Working Days</string>
    <string name="preferred_time">Preferred Working Time</string>
    <string name="specialities">2. Specialities</string>
    <string name="speciality">Speciality</string>
    <string name="finish">Finish</string>
    <string name="startTime">Start Time : </string>
    <string name="to_be_filled">-</string>
    <string name="endTime">End Time : </string>
    <string name="s">S</string>
    <string name="m">M</string>
    <string name="w">W</string>
    <string name="t">T</string>
    <string name="f">F</string>
    <string name="next">Next</string>
    <string name="service">Service</string>
    <string name="title">Title</string>
    <string name="post_a_Job">Post a job</string>
    <string name="history">History</string>
    <string name="feedback">Feedback</string>
    <string name="notification">Notification</string>
    <string name="view_offers">View Job Offers</string>
    <string name="admin">Admin</string>
    <string name="manage_services">Manage Services</string>
    <string name="manage_users">Manage Users</string>
    <string name="manage_feedback">Manage Feedback</string>
    <string name="tickets">Manage Tickets</string>
    <string name="logs">Logs</string>
    <string name="chat">Chat</string>
    <string name="cash_flow">Cash Flow</string>
    <string name="dismiss">dismiss</string>
    <string name="thank_you_for_registering">Thank you for registering</string>
    <string name="check_email">Kindly check your email to activate your account and set a password</string>
    <string name="resent_email">Resend Email</string>
    <string name="welcome_back">Welcome back,</string>
    <string name="password">Password</string>
    <string name="dont_have_account">Don\'t have an account? Sign up</string>
    <string name="phone_hint">+254xxxxxxxx</string>
    <string name="welcome">Welcome,</string>
    <string name="new_password">New Password</string>
    <string name="have_account">Already a member? Sign in</string>
    <string name="good_morning_wafula">Good Morning Wafula ,</string>
    <string name="what_service">Which service do you need today?</string>
    <string name="search">Search</string>
    <string name="select_service">Service a service Category</string>
    <string name="confirm">Confirm</string>
    <string name="local_service_provider">Local Service Provider</string>
    <string name="sign_up">Sign up</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="code_hint">X X X - X X X</string>
    <string name="role">Role</string>
    <string name="names">Name</string>
    <string name="names_hint">John Doe</string>
    <string name="email_address">Email Address</string>
    <string name="email_address_hint">xyz@email.com</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="bio">4. Bio</string>
    <string name="bio_label">Bio</string>
    <string name="bio_hint">Tell us a bit about your left i.e. cover letter</string>
    <string name="id_hint">3540264</string>
    <string name="id_number">3. Identity Number</string>
    <string name="username">Username</string>
    <string name="removeitembutton">Remove Item</string>
    <string name="select_a_speciality">Select a speciality</string>
    <string name="pick_a_speciality">Pick a speciality</string>
    <string name="logout">Logout</string>
    <string name="search_location">Search Location</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="provide_a_description_of_your_job">Provide a description of your job. The service provider will do only what is required of him / her</string>
    <string name="description">Description</string>
    <string name="time">Time</string>
    <string name="timeLabel">Time : </string>
    <string name="as_soon_as_possible">As soon as possible</string>
    <string name="scheduled">Schedule</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="my_jobs">My Jobs</string>
    <string name="parties">Parties</string>
    <string name="location">Location</string>
    <string name="price">Price</string>
    <string name="job_description">Job Description</string>
    <string name="status">Status</string>
    <string name="job_description_label">Job description : </string>
    <string name="client_label">Client : </string>
    <string name="service_provider_label">Service Provider : </string>
    <string name="job_status_label">Job status : </string>
    <string name="location_label">Location : </string>
    <string name="speciality_label">Speciality : </string>
    <string name="price_label">Price : </string>
    <string name="price_range_label">Price Range : </string>
    <string name="createdat_label">Created at : </string>
    <string name="completedat_label">Completed at : </string>
    <string name="check_verification">Check verification status</string>
    <string name="change_mobile_number">Change Mobile Number</string>
    <string name="send_otp">Send Verification Message</string>
    <string name="check_otp">Confirm OTP</string>
    <string name="enter_password_received_from_sms">Enter digits received from sms</string>
    <string name="resent_opt">Resend OTP</string>
    <string name="title_activity_job_requests">JobRequests</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="decline">Decline</string>
    <string name="negotiate">Negotiate</string>
    <string name="urgencyLabel">Urgency :</string>
    <string name="urgency">Urgency :</string>
    <string name="min">Min</string>
    <string name="minksh">Min (KSH)</string>
    <string name="maKsh">Max (KSH)</string>
    <string name="users">Users</string>
    <string name="star">*</string>
    <string name="suggest_price">Suggest Your price</string>
    <string name="_0">0</string>
    <string name="comment_here">Comment here …</string>
    <string name="reviews">Reviews</string>
    <string name="info">Info</string>
    <string name="report">Reports</string>
    <string name="chats">Chat</string>
    <string name="service_providers_review_label">Client\'s Review : </string>
    <string name="client_review_label">Service Provider\'s Review : </string>
    <string name="not_rated_yet">Not rated yet</string>
    <string name="deleted">Deleted</string>
    <string name="job">Job</string>
    <string name="action">Action</string>
    <string name="filter_by_rating">Filter By Rating</string>
    <string name="media_channel_description">This is to notify you about relevant media in app</string>
    <string name="user_channel_description">This is to notify you about relevant activity related to you</string>
    <string name="synch_notification_description">To show you when synchronization is occurring</string>
    <string name="id">Identification Number</string>
    <string name="rating">Rating</string>
    <string name="title_activity_job_track">JobTrackActivity</string>
</resources>