<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/quantum_grey"
    android:layout_margin="5dp"
    android:layout_gravity="center"
    app:cardCornerRadius="20dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/statusTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:text="@string/status"/>

            <TextView
                android:id="@+id/statusContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:background="@color/quantum_grey"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:text="@string/job_status_label"/>

            <TextView
                android:id="@+id/jdTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:text="@string/job_description"/>

            <TextView
                android:id="@+id/jdContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:text="@string/job_description_label"/>

            <TextView
                android:id="@+id/partyTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:text="@string/parties"/>

            <TextView
                android:id="@+id/clientPartyContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:text="@string/client_label"/>

            <TextView
                android:id="@+id/providerPartyContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:text="@string/service_provider_label"/>


            <TextView
                android:id="@+id/locationTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:text="@string/location"/>

            <TextView
                android:id="@+id/locationContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:text="@string/location_label"/>


            <TextView
                android:id="@+id/specialityTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:text="@string/speciality"/>

            <TextView
                android:id="@+id/specialityContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:text="@string/speciality_label"/>

            <TextView
                android:id="@+id/priceTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:text="@string/price"/>

            <TextView
                android:id="@+id/priceContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:text="@string/price_label"/>

            <TextView
                android:id="@+id/priceRangeContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:text="@string/price_range_label"/>

            <TextView
                android:id="@+id/timeTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:text="@string/time"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/createdAtContent"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:text="@string/createdat_label"/>

                <TextView
                    android:id="@+id/completedAtContent"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:text="@string/completedat_label"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.cardview.widget.CardView>