<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center_vertical"
                android:padding="20dp"
                android:text="@string/welcome"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center_vertical"
                android:padding="20dp"
                android:text="@string/phone_number"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/edit_text_field_white"
                android:gravity="center_vertical"
                android:hint="@string/phone_hint"
                android:importantForAutofill="auto"
                android:inputType="phone"
                android:padding="20dp"
                android:textColorHint="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center_vertical"
                android:padding="20dp"
                android:text="@string/new_password"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/edit_text_field_white"
                android:gravity="center_vertical"
                android:hint="@string/password_hint"
                android:importantForAutofill="auto"
                android:inputType="textPassword"
                android:padding="20dp"
                android:textColorHint="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center_vertical"
                android:padding="20dp"
                android:text="@string/confirm_password"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/edit_text_field_white"
                android:gravity="center_vertical"
                android:hint="@string/password_hint"
                android:importantForAutofill="auto"
                android:inputType="textPassword"
                android:padding="20dp"
                android:textColorHint="@color/black" />

            <Button
                android:id="@+id/registerUserButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="15dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:background="@drawable/login_bg_button"
                android:backgroundTint="@color/deep_purple"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/have_account"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>