<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".clientUi.request.DetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:textColor="@color/purple"
            android:text="@string/description"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/descriptionField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/edit_text_field_white_thin"
            android:gravity="center"
            android:hint="@string/provide_a_description_of_your_job"
            android:minWidth="48dp"
            android:padding="30dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:textColor="@color/purple"
            android:text="@string/time"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"/>

        <RadioGroup
            android:id="@+id/timeGroup"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:gravity="center">

            <RadioButton
                android:id="@+id/asap"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:checked="true"
                android:buttonTint="@color/deep_purple"
                android:text="@string/as_soon_as_possible"/>

            <RadioButton
                android:id="@+id/schedules"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/deep_purple"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:text="@string/scheduled"/>

        </RadioGroup>

        <TextView
            android:id="@+id/scheduledTimeTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/deep_purple"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>