<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/adminSecret"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jobo"
            android:longClickable="true"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:textColor="@color/deep_purple"
            android:padding="10dp"
            android:textSize="50sp"
            android:textStyle="bold"
            android:fontFamily="serif"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thank_you_for_registering"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:padding="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_email"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:padding="10dp"
            android:textSize="20sp"
            android:textStyle="normal"
            android:fontFamily="sans-serif"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resent_email"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:padding="10dp"
            android:textSize="20sp"
            android:textStyle="normal"
            android:drawablePadding="30dp"
            android:fontFamily="sans-serif"
            app:drawableEndCompat="@android:drawable/ic_dialog_email"
            app:drawableTint="@color/purple" />


    </LinearLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>